--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:#424242;">
 
-<h1>ProChroEx Dashboard</h1>
-<p>Analysiere Dein Nutzungsverhalten</p>
+<h1 style="color: white">ProChroEx Dashboard</h1>
+<p style="color: white">Guten Morgen, Marcel</p>
 
 </body>
 </html> 
